roles/iptables/files/rules.v4
*nat
:PREROUTING ACCEPT [324:19496]
:INPUT ACCEPT [141:8004]
:OUTPUT ACCEPT [231:18944]
:POSTROUTING ACCEPT [231:18944]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 9100 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 9100 -j DNAT --to-destination 172.17.0.2:9100
COMMIT
*filter
:INPUT DROP [90:5761]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [5598:7189424]
:ANSIBLE_INPUT - [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -j ANSIBLE_INPUT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 33 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 465 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 995 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9100 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9001 -j ACCEPT
-A INPUT -p udp -m udp --dport 123 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 6380 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 123 --dport 123 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 25 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 8080 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 6443 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9001 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 6697 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 6380 -m state --state NEW -j ACCEPT
-A ANSIBLE_INPUT -i lo -j ACCEPT
-A ANSIBLE_INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 33 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 465 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 995 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 9100 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 9001 -j ACCEPT
-A ANSIBLE_INPUT -p udp -m udp --dport 123 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 6380 -j ACCEPT
COMMIT
