roles/iptables/files/rules.v6
*filter
:INPUT DROP [134:27863]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2401:537842]
:ANSIBLE_INPUT - [0:0]
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -j ANSIBLE_INPUT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 33 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 465 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 995 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9100 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9001 -j ACCEPT
-A INPUT -p udp -m udp --dport 123 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 6380 -j ACCEPT
-A OUTPUT -p ipv6-icmp -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 123 --dport 123 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 25 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 8080 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 6443 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9001 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 6697 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 6380 -m state --state NEW -j ACCEPT
-A ANSIBLE_INPUT -i lo -j ACCEPT
-A ANSIBLE_INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 33 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 465 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 995 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 9100 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 9001 -j ACCEPT
-A ANSIBLE_INPUT -p udp -m udp --dport 123 -j ACCEPT
-A ANSIBLE_INPUT -p tcp -m tcp --dport 6380 -j ACCEPT
COMMIT
